Dec 22 2024 - Promish
### Added
- Added bolier play for services and main serve
- Added model for auth user and duplication check